1.58
-----------------
GR v15r20
Fix bug that caused LCI runs to not get finalized.
-------------------------------------------


1.57
-----------------
GR v15r19 (appropriate jobOptions were added for digi).
New monitoring tags (bug fix in FastMon geomagnetic variables).
Attach MOOT key and alias as metadata when registering files.
Avoid the merging issue described in JIRA LONE-67.
Make run locking a little more verbose.
-------------------------------------------


1.56
-----------------
GR v15r13
Lots of new monitoring tags.
Use different aspLauncher for dev.
Use symbolic links to point to buffers.
Use flight geometry always.
Export to GSSC on prod.
-------------------------------------------


1.55
-----------------
GR v15r6p1.
ST v9r5p5.
Lots of new monitoring tags.
Don't clean up crumbs or chunks if a merge has missing input files.
Fix several bugs in incomplete run handling.
-------------------------------------------


1.54
-----------------
GlastRelease GR v15r5 and Root v5.18.00c-gl1 (new DFI with the filter bits).
Using the ISOC_NIGHLY flightops configuration (to get the new DFI).
New tags of monitoring packages (to include the filter bits informations).
PipelineStaging6 buffer disk temporarily removed from confing.
Be more paranoid about running cleanupCrumbs.
Make saved recon core files world-readable and group-writeable.
Include chunkId in logger message if not all crumb files are found for.
-------------------------------------------


1.53
-----------------
Don't set confusing & wrong status metadata when registering datasets.
Put data in /Data/Flight, not /Data/IandT.
Put nfs data in .../L1 instead of .../L1/rootData.
Put LPA, LCI, MC data in separate folders.
Do alarms on TKR trending.
Send messages to log watcher if things get weird.
Removed site from the end of filenames.
Bug fixed in DataCat registration (fileFormat). 
-------------------------------------------


1.52
-----------------
Keep & register ft2Txt files.